export type Component = { id?: number, guid?: string, model?: ComponentModel, type?: ComponentModelType }
export type ComponentModel = { id?: number, title?: string }
export type ComponentModelType = { id?: number, title?: string }